updates for exercises

--- a/C1-L02-Ex1.qmd
+++ b/C1-L02-Ex1.qmd
@@ -1,4 +1,12 @@
 ---
+title: "Conditional Probability and Bayes' Law"
+subtitle: "Bayesian Statistics: From Concept to Data Analysis"
+categories:
+  - Bayesian Statistics
+keywords:
+  - Conditional Probability
+  - Bayes' Law
+  - Homework
 ---
 
 ## Homework - Conditional Probability and Bayes' Law
@@ -15,7 +23,7 @@ print(df)
 [Titanic data]{.colum-margin} If we randomly select a person's name from the complete list of passengers and crew, what is the probability that this person traveled in 1st class? Round your answer to two decimal places.
 :::
 
-::: {.solution .callout-tip collapse="true"}
+:::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
 ```{python}
@@ -23,13 +31,13 @@ def l02q01(df):
     return  round(df.loc[1].sum() / df.values.sum(),2)
 l02q01(df)
 ```
-:::
+::::
 
 ::: {#exr-cpb-2}
 [Titanic data]{.colum-margin} What is the probability that a (randomly selected) person survived? Round your answer to two decimal places.
 :::
 
-::: {.solution .callout-tip collapse="true"}
+:::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
 ```{python}
@@ -39,13 +47,13 @@ def l02q02(df):
 
 l02q02(df)
 ```
-:::
+::::
 
 ::: {#exr-cpb-3}
 [Titanic data]{.colum-margin} What is the probability that a (randomly selected) person survived, given that they were in 1st class? Round your answer to two decimal places.
 :::
 
-::: {.solution .callout-tip collapse="true"}
+:::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
 ```{python}
@@ -58,17 +66,18 @@ def l02q03(df):
 
 l02q03(df)
 ```
-:::
+
+::::
 
 ::: {#exr-cpb-4}
 [Titanic data]{.colum-margin} True/False: The events concerning class and survival are statistically independent.
 :::
 
-::: {.solution .callout-tip collapse="true"}
+:::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
 False
-:::
+::::
 
 [Marbles data]{.colum-margin} You have three bags, labeled A, B, and C. Bag A contains two red marbles and three blue marbles. Bag B contains five red marbles and one blue marble. Bag C contains three red marbles only.
 
@@ -85,7 +94,7 @@ print(mdf)
 [Marbles data]{.colum-margin} If you select from bag B, what is the probability that you will draw a red marble?
 :::
 
-::: {.solution .callout-tip collapse="true"}
+:::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
 ```{python}
@@ -98,7 +107,7 @@ def l02q05(df):
 
 l02q05(mdf)
 ```
-:::
+::::
 
 ::: {#exr-cpb-6}
 [Marbles data]{.colum-margin} If you randomly select one of the three bags with equal probability, so that $P(A)=P(B)=P(C)=1/3$, and then randomly draw a marble from that bag, what is the probability that the marble will be blue? Round your answer to two decimal places.
@@ -117,7 +126,7 @@ $$
 $$
 :::
 
-::: {.solution .callout-tip collapse="true"}
+:::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
 ```{python}
@@ -131,13 +140,14 @@ def l02q06(df):
 
 print(f'P(blue)={l02q06(mdf)}')
 ```
-:::
+
+::::
 
 ::: {#exr-cpb-7}
 [Marbles data]{.colum-margin} Suppose a bag is randomly selected (again, with equal probability), but you do not know which it is. You randomly draw a marble and observe that it is blue. What is the probability that the bag you selected this marble from is A? That is, find $P(A∣blue)$.
 :::
 
-::: {.solution .callout-tip collapse="true"}
+:::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
 ```{python}
@@ -154,13 +164,14 @@ def l02q07(df):
 p=l02q07(mdf)
 print(f"{p['a|blue']=:1.2f}")
 ```
-:::
+
+::::
 
 ::: {#exr-cpb-8}
 [Marbles data]{.colum-margin} Suppose a bag is randomly selected (again, with equal probability), but you do not know which it is. You randomly draw a marble and observe that it is blue. What is the probability that the bag you selected is `C`? That is, find $P(C∣blue)$.
 :::
 
-::: {.solution .callout-tip collapse="true"}
+:::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
 ```{python}
@@ -181,13 +192,13 @@ p=l02q08(mdf)
 print(f"{p['c|blue']=:1.2f}")
 
 ```
-:::
+::::
 
 ::: {#exr-cpb-9}
 [Marbles data]{.colum-margin} Suppose a bag is randomly selected (again, with equal probability), but you do not know which it is. You randomly draw a marble and observe that it is red. What is the probability that the bag you selected is C? That is, find $P(C∣red)$.
 :::
 
-::: {.solution .callout-tip collapse="true"}
+:::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
 ```{python}
@@ -214,4 +225,4 @@ def l02q09(df):
 p=l02q09(mdf)
 print(f"{p['c|red']=:1.2f}")
 ```
-:::
+::::
