--- a/C1-L02-Ex2.qmd
+++ b/C1-L02-Ex2.qmd
@@ -1,9 +1,19 @@
+---
+title: "Conditional Probability and Bayes' Law"
+subtitle: "Bayesian Statistics: From Concept to Data Analysis"
+categories:
+  - Bayesian Statistics
+keywords:
+  - Conditional Probability
+  - Bayes' Law
+  - Homework+
+---
 
-# Probability and Baye's Theorem
+# Probability and Bayes' Theorem
 
 ## Homework Honors 1
 
-::: {#exr-honnor1-1}
+::: {#exr-honor1-1}
 Which must be true if random variable X is a continuous RV with PDF $f(x)$?
 :::
 
@@ -14,7 +24,7 @@ Which must be true if random variable X is a continuous RV with PDF $f(x)$?
 -   $\lim_{x \to \infty} f(x)=1$
 :::
 
-::: {#exr-honnor1-2}
+::: {#exr-honor1-2}
 If $X∼Exp(3)$, what is the value of $P(X>1/3)$?
 :::
 
@@ -29,7 +39,7 @@ P(X>1/3) &= \int_{1/3}^\infty 3 e^{−3x} dx \\ &= −e|_{−3x}^\infty \\ &= 0-
 $$
 :::
 
-::: {#exr-honnor1-3}
+::: {#exr-honor1-3}
 Suppose $X∼Uniform(0,2)$ and $Y∼Uniform(8,10)$. What is the value of $\mathbb{E}(4X+Y)$?
 :::
 
@@ -43,7 +53,7 @@ $$\begin{aligned} \mathbb{E}(4X+Y)&=4\mathbb{E}(X)+\mathbb{E}(Y)\\&=4(1)+9 \\&= 
 
 Suppose $X∼N(1,25)$ and $Y∼N(−2,9)$ and that $X$ and $Y$ are independent. We have $Z=X+Y∼N(μ,σ^2)$ because the sum of normal random variables also follows a normal distribution.
 
-::: {#exr-honnor1-4}
+::: {#exr-honor1-4}
 [Adding normals]{.column-margin} What is the value of $\mu$?
 :::
 
@@ -53,7 +63,7 @@ Suppose $X∼N(1,25)$ and $Y∼N(−2,9)$ and that $X$ and $Y$ are independent. 
 $\mu=\mathbb{E}[Z]=\mathbb{E}[X+Y]=\mathbb{E}[X]+\mathbb{E}[Y]=1+(−2)$
 :::
 
-::: {#exr-honnor1-5}
+::: {#exr-honor1-5}
 [Adding normals]{.column-margin} What is the value of $σ^2$?
 :::
 
@@ -69,7 +79,7 @@ If two random variables are `independent`, the variance of their sum is the sum 
 $=Var(Z)=Var(X+Y)=Var(X)+Var(Y)=25+9=34$
 :::
 
-::: {#exr-honnor1-6}
+::: {#exr-honor1-6}
 [Adding normals]{.column-margin} If RVs X and Y aren't independent, we still have $$\mathbb{E}(X+Y)=\mathbb{E}(X)+\mathbb{E}(Y)$$
 
 but now $$Var(X+Y)=Var(X)+Var(Y)+2 Cov(X, Y)$$
@@ -109,14 +119,14 @@ $$
 $$
 :::
 
-::: {#exr-honnor1-7}
-[Adding normals]{.column-margin} Consider again $X∼N(1,5^2)$ and $Y∼N(−2,3^2)$, but this time $X$ and $Y$ are not independent. Then $Z=X+Y$ is still normally distributed with the same mean found in (@exr-honnor1-4). What is the variance of Z if $\mathbb{E}(XY)=−5$?
+::: {#exr-honor1-7}
+[Adding normals]{.column-margin} Consider again $X∼N(1,5^2)$ and $Y∼N(−2,3^2)$, but this time $X$ and $Y$ are not independent. Then $Z=X+Y$ is still normally distributed with the same mean found in (@exr-honor1-4). What is the variance of Z if $\mathbb{E}(XY)=−5$?
 :::
 
 ::: {.callout-note collapse="true"}
 #### Hint
 
-Use the formulas introduced in Question (@exr-honnor1-6).
+Use the formulas introduced in Question (@exr-honor1-6).
 :::
 
 ::: {.solution .callout-tip collapse="true"}
@@ -129,7 +139,7 @@ Var(Z) &= Var(X) + Var(Y) + 2Cov(X,Y) \\ &= 25 + 9 + 2Cov(X,Y) \\ &= 34 + 2 (\ma
 $$
 :::
 
-::: {#exr-honnor1-8}
+::: {#exr-honor1-8}
 Use the definition of conditional probability to show that for events A and B, we have
 
 $$
@@ -147,12 +157,12 @@ P(B \mid A)= \frac{P(A \cap B)}{P(A)} \\P(B \mid A)P(A)=P(A \cap B)
 \end{aligned}$$
 :::
 
-::: {#exr-honnor1-9}
+::: {#exr-honor1-9}
 Show that the two expressions for independence $P(A∣B)=P(A)$ and $P(A∩B) = P(A)P(B)$ are equivalent.
 :::
 
 ::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
-Plug these expressions into those from (@exr-honnor1-8).
+Plug these expressions into those from (@exr-honor1-8).
 :::
