--- a/C1-L12-Ex1.qmd
+++ b/C1-L12-Ex1.qmd
@@ -1,3 +1,5 @@
+---
+---
 
 ## Homework On Regression
 
@@ -31,7 +33,7 @@ summary(datF)
 ::: {#exr-regression-golf-1}
 [**Golf**]{.column-margin} Create two scatter plots with average drive distance on the x-axis and percent accuracy on the y-axis, one for female golfers and one for male golfers. What do you observe about the relationship between these two variables?
 
-::: {.solution .callout-tip collapse="true"}
+:::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
 ```{r}
@@ -45,7 +47,8 @@ abline(lm(datF$accuracy~datF$distance), col="red") # regression line (y~x)
 lines(lowess(datF$accuracy,datF$distance), col="blue") # lowess line (x,y)
 
 ```
-:::
+
+::::
 :::
 
 ::: {#exr-regression-golf-2}
@@ -59,14 +62,15 @@ In this particular model, the intercept term is not interpretable, as we would n
 
 Report the posterior mean estimate of the slope parameter $b$ relating drive distance to accuracy.
 
-::: {.solution .callout-tip collapse="true"}
+:::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
 ```{r}
 mod1 <- lm(accuracy ~ distance, data=datF)
 summary(mod1)
 ```
-:::
+
+::::
 :::
 
 ::: {#exr-regression-golf-3}
@@ -76,7 +80,7 @@ The posterior mean estimate of the slope from [@exr-regression-golf-2] is about 
 
 Suppose the estimate is $b$. How do we interpret this value?
 
-::: {.solution .callout-tip collapse="true"}
+:::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
 -   [ ] If x is the driving distance, we expect the percentage accuracy to be $100bx$.
@@ -86,7 +90,8 @@ Suppose the estimate is $b$. How do we interpret this value?
 -   [x] For each additional yard of driving distance, we expect to see a decrease in percentage accuracy of $∣b∣$.
 
 -   [ ] For each additional yard of driving distance, we expect to see an increase in percentage accuracy of $∣b∣$.
-:::
+::::
+
 :::
 
 ::: {#exr-regression-golf-4}
@@ -106,7 +111,7 @@ Which of the following gives a 95% posterior predictive interval for the driving
 
 Hint: Modify the code provided with this lesson under "prediction interval."
 
-::: {.solution .callout-tip collapse="true"}
+:::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
 ```{r}
@@ -128,7 +133,7 @@ $$\hat{y}^* \pm t_{n-2}^{-1}(0.975) \cdot se_r \cdot \sqrt{1 + \frac{1}{n} + \fr
 -   $se_r$ is the residual standard error (estimate of $\sigma$)
 -   $\bar{x}$ is the sample mean of driving distance, and\
 -   $s_x^2$ is the sample variance of driving distance.
-:::
+::::
 :::
 
 ::: {#exr-regression-golf-6}
@@ -136,7 +141,7 @@ $$\hat{y}^* \pm t_{n-2}^{-1}(0.975) \cdot se_r \cdot \sqrt{1 + \frac{1}{n} + \fr
 
 What is the interpretation of the interval found in [@exr-regression-golf-5]?
 
-::: {.solution .callout-tip collapse="true"}
+:::: {.solution .callout-tip collapse="true"}
 #### Solution:
 
 -   [ ] If we select a new female golfer who averages 260 yards per drive, we are 95% confident that the posterior mean for her accuracy would be in the interval.
@@ -148,5 +153,6 @@ Why is this the correct answer:
 
 1.  A Predictive interval does not predict a posterior mean.
 2.  It predicts a new observation.
-:::
+::::
+
 :::
