--- a/C3-L01-Ex1.qmd
+++ b/C3-L01-Ex1.qmd
@@ -1,27 +1,38 @@
+---
+title : 'Basic Concepts of Mixture Models'
+subtitle : 'Bayesian Statistics: Mixture Models'
+categories:
+  - Bayesian Statistics
+keywords:
+  - Mixture Models
+  - Homework
+---
 
 ## HW - Simulation of Poisson mixture model
 
 ```{r}
-
+#| label: fig-poisson-mix
 # Generate n observations from a mixture of three poisson distributions
 set.seed(452)
 
 n = 200 # sample size
-
 w = c(0.7,0.2,0.1) # weights
-
 lambda = c(1,2,6) # lambda params (mean,variation)
-
 ac = sample(1:length(w),n, replace=T, prob=w) # smaple the active component
-
 x = rpois(n,lambda=lambda[ac]) # simulate an ac mixture component n time 
 
 #par(mar=c(4,4,1,1) + 0.1)
 
 empirical_feqs = table(factor(x, levels=seq(0, max(x)))) # tabulate samples into a counts
-
 empirical_dist = empirical_feqs /n # convert frequencies to probabilities
+```
 
+Plot the empirical distribution
+
+```{r}
+#| label: fig-poisson-mix-1
+#| fig-cap: "Empirical distribution for Poisson mixture"
+par(mar=c(4,4,1,1) + 0.1)
 barplot(empirical_dist,xlab="counts",ylab="probability",main="Empirical distribution for Poisson mixture")
 
 ```
@@ -29,6 +40,7 @@ barplot(empirical_dist,xlab="counts",ylab="probability",main="Empirical distribu
 
 
 ```{r}
+#| label: lbl-poisson-mix-2
 set.seed(42)
 
 n = 1000                  # Larger sample size
