--- a/c03-mixtures/m1-basics/two-norm-mix/index.qmd
+++ b/c03-mixtures/m1-basics/two-norm-mix/index.qmd
@@ -28,7 +28,7 @@ points(x, y=rep(0,n), pch=1)
 ```
 
 So this is pretty ugly code even for R.
-The variable names are great at confusing the reader - particularly as they are drawn from complex mathematical formulations ommitted from the samples.
+The variable names are great at confusing the reader - particularly as they are drawn from complex mathematical formulations omitted from the samples.
 
 
 Also there is a number of Gaussian mixture models in this module, it may be worth whole to convert these snippets into functions.
