added and re-organized images for c3

--- a/C2-L09.qmd
+++ b/C2-L09.qmd
@@ -31,15 +31,12 @@ pairs(dat)
 
 One thing that stands out is that several of these variables are strongly correlated with one another. For example `gravity` and `osmo` appear to have a very close linear relationship. Collinearity between $x$ variables in linear regression models can cause trouble for statistical inference. [Two correlated variables will compete for the ability to predict the response variable, leading to unstable estimates. This is not a problem for prediction of the response, if prediction is the end goal of the model. But if our objective is to discover *how* the variables relate to the response, we should avoid collinearity.]{.mark}
 
-
 ::: callout-important
 #### Collinearity and Multicollinearity
 
-When two covariates are highly correlated we call this relation **collinearity**. \index{collinearity} When one covariate in a multiple regression model can be linearly predicted from the others with a substantial degree of accuracy we call this relation **multicollinearity**.
-It is possible that no two pairs of a multicollinear \index{multicollinearity} group of covariates are correlated.
+When two covariates are highly correlated we call this relation **collinearity**. \index{collinearity} When one covariate in a multiple regression model can be linearly predicted from the others with a substantial degree of accuracy we call this relation **multicollinearity**. It is possible that no two pairs of a multicollinear \index{multicollinearity} group of covariates are correlated.
 
-In both cases this will lead to the *design matrix* being almost *singular.* Near singular matrices are a strong cause of instability in numerical calculations.
-Statistical this tends to lead to a model with inflated *standard errors* compared to models where we only keep the a subset where variables are neither **collinear** nor **multicollinear**. A consequence of this is that we will see a drop in *statistical significance* for these variables, which will make interpreting the model harder.
+In both cases this will lead to the *design matrix* being almost *singular.* Near singular matrices are a strong cause of instability in numerical calculations. Statistical this tends to lead to a model with inflated *standard errors* compared to models where we only keep the a subset where variables are neither **collinear** nor **multicollinear**. A consequence of this is that we will see a drop in *statistical significance* for these variables, which will make interpreting the model harder.
 
 We have seen a few strategies ways to deal with these issues:
 
@@ -226,6 +223,6 @@ densplot(mod2_csim[,1:3], xlim=c(-3.0, 3.0))
 colnames(X)[c(1,4,6)] # variable names
 ```
 
-The DIC is actually better for the first model. Note that we did change the prior between models, and generally we should not use the DIC to choose between priors. Hence comparing DIC between these two models may not be a fair comparison. Nevertheless, they both yield essentially the same conclusions. Higher values of `gravity` and `calc` (calcium concentration) are associated with higher probabilities of calcium oxalate crystals, while higher values of `cond` (conductivity) are associated with lower probabilities of calcium oxalate crystals.
+The DIC is actually better for the first model. Note that we did change the prior between models, and generally we should not use the DIC to choose between priors. Hence comparing DIC between these two models may not be a fair comparison. Nevertheless, they both yield essentially the same conclusions. Higher values of `gravity` and `calc` (calcium concentration) are associated with higher probabilities of *calcium oxalate crystals*, while higher values of `cond` (conductivity) are associated with lower probabilities of *calcium oxalate crystals*.
 
 There are more modeling options in this scenario, perhaps including transformations of variables, different priors, and interactions between the predictors, but we'll leave it to you to see if you can improve the model.
