--- a/C3-L01-Ex1-Basic-Definitions.qmd
+++ b/C3-L01-Ex1-Basic-Definitions.qmd
@@ -10,7 +10,7 @@ keywords:
 
 
 ::: {#exr-1}
-1. Which one of the following is not the density of a well defined mixture distribution with support on $x \ge 1$
+1. Which one of the following **is not** the density of a well defined mixture distribution with support on $x \ge 1$
 x
 
 - [ ] $f(x) = \frac{1}{2}\ e^{-x} + \frac{1}{2} \frac{1}{\sqrt{2 \pi}} \exp^{-0.5x^2}$
