--- a/C3-L01-Ex2-Gaussian-mixtures.qmd
+++ b/C3-L01-Ex2-Gaussian-mixtures.qmd
@@ -11,46 +11,35 @@ keywords:
 
 
 ::: {#exr-1}
-1. Which one of the following is not the density of a well defined mixture distribution with support on $x \ge 1$
-x
+True or False? A scale mixture of normals with density
+$$
+f(x) = \sum_{k=0}^{K} \omega_k \frac{1}{\sqrt{2 \pi}\sigma_k} e^{-\frac{x^2}{\sigma_k^2}} \qquad
+$$ {#eq-scale-mixture}
 
-- [ ] $f(x) = \frac{1}{2}\ e^{-x} + \frac{1}{2} \frac{1}{\sqrt{2 \pi}} \exp^{-0.5x^2}$
+is always unimodal?
 
-- [ ] $f(x) = \frac{1}{2}\ e^{-x} + \frac{1}{4}\ e^{-x}$
+:::: {.callout-note collapse="true"}
+## Solution
 
-- [x] $f(x) = \frac{1}{2}\ e^{-x} + \frac{1}{2}\ e^{- 0.5 x}$
+True
 
+We can see from the functional form that this is a sum of K Gaussian densities, with maximum at 0 and monotonically decreasing everywhere else.
 
-Hint: the key here is to write the mixtures with the weights and the normalization constant clearly separated. This reveals that the last one is not a well defined mixture distribution because the weights do not sum to 1 while the the second answer is!
+::::
 
 :::
 
 ::: {#exr-2}
 
-2. 
-What is the expected value of a random variable X whose distribution is a mixture of Poisson distributions with the form
+True or False? A scale mixture of normals with density as in @eq-scale-mixture is always symmetric?
 
-$$
-f(x) = 0.3 \frac{2^x e^{-2}}{x!}  + 0.45 \frac{2^x e^{-3}}{x!} + 0.25 \frac{.5^x e^{-0.5}}{x!}
-$$ {#eq-three-component-poisson-mixture}
+:::: {.callout-note collapse="true"}
+## Solution
 
-$$
-E(X) = 0.3 \cdot 2 + 0.45 \cdot 3 + 0.25 \cdot 0.5 = 2.075
-$$
+True 
 
-:::
+If we inspect the functional form we can see that since x is squared in this function, it is symmetric around 0.
 
-
-::: {#exr-3}
-
-3. What is the variance of a random variable X whose distribution is a mixture of Poisson distributions with the form [@eq-three-component-poisson-mixture] ?
-
-$$
-E(X^2) = 0.3 \cdot (2+2^2 ) + 0.45 \cdot (3+3^2) + 0.25 \cdot (0.5 + 0.5^2)= 7.3875
-$$
-
-$$
-Var(X) = E(X^2) - E(X)^2 = 7.3875 - (2.075)^2 = 3.081875
-$$
+::::
 
 :::
