--- a/C3-L01.qmd
+++ b/C3-L01.qmd
@@ -56,11 +56,11 @@ Mixture models provide a flexible approach to modeling data and are useful in *d
 ![Mixtures definitions](images/c3l01-ss-01-mixtures.png){.column-margin}
 
 ::: {#def-mixture}
-Let $ω_1 , \ldots , ω_K$ be a collection of real numbers such that $0 \le ω_k \le 1$ and $\sum^K_{k=1} ω_k = 1$, and $G_1, \ldots, G_K$ be a collection of cumulative distribution functions. A random variable $X$ with cumulative distribution function $F(x) = Pr(X \le x)$ of the form
+Let $\omega_1 , \ldots , \omega_K$ be a collection of real numbers such that $0 \le \omega_k \le 1$ and $\sum^K_{k=1} \omega_k = 1$, and $G_1, \ldots, G_K$ be a collection of cumulative distribution functions. A random variable $X$ with cumulative distribution function $F(x) = Pr(X \le x)$ of the form
 
 
 $$
-F(x) =\sum^K_{k=1} \underbrace{ω_k}_{weight}\ \cdot \ \underbrace{G_k(X)}_{component} \qquad
+F(x) =\sum^K_{k=1} \underbrace{\omega_k}_{weight}\ \cdot \ \underbrace{G_k(X)}_{component} \qquad
 $$ {#eq-finite-mixture-cdf}
 
 
@@ -68,36 +68,36 @@ is said to follow **a finite mixture distribution** with K components.
 
 
 $$
-f(x) =\sum^K_{k=1} \underbrace{ω_k}_{weight}\ \cdot \ \underbrace{g_k(X)}_{component} \qquad
+f(x) =\sum^K_{k=1} \underbrace{\omega_k}_{weight}\ \cdot \ \underbrace{g_k(X)}_{component} \qquad
 $$ {#eq-finite-mixture-pdf}
 
 
 where $g_k(x)$ is the density associated with $G_k(x)$
 
-The values $ω_1 , \ldots, ω_K$ are usually called the "weights" of the mixture, and the distributions $G_1 , \ldots, G_K$ are called the "components" of the mixture.
+The values $\omega_1, \ldots, \omega_K$ are usually called the "weights" of the mixture, and the distributions $G_1 , \ldots, G_K$ are called the "components" of the mixture.
 :::
 
-Each component will typically belong to a parametric family that is indexed by its own parameter $θ_k$ .
+Each component will typically belong to a parametric family that is indexed by its own parameter $\theta_k$ .
 
-We will write $G_k(x) = G_k (x \mid θ_k )$ whenever it is necessary to highlight the dependence on these parameters.
+We will write $G_k(x) = G_k (x \mid \theta_k )$ whenever it is necessary to highlight the dependence on these parameters.
 
-It is often the case that $G_1 , \ldots G_K$ all belong to the same family and differ only in the value parameters associated with each of the distributions, so that $G_k (x \mid θ_k ) = G(x \mid θ_k )$. In that case, the function $G$ (and sometimes its density/probability mass function $g$) are called the "kernel" of the mixture.
+It is often the case that $G_1, \ldots, G_K$ all belong to the same family and differ only in the value parameters associated with each of the distributions, so that $G_k (x \mid \theta_k ) = G(x \mid \theta_k )$. In that case, the function $G$ (and sometimes its density/probability mass function $g$) are called the "kernel" of the mixture.
 
 ::: #exm-exponential-mixture
 ## Three component Exponential mixture
 
-For example, we could define a mixture with $K = 3$ components, with $G(x \mid θ_1 )$, $G(x \mid θ_2 )$ and $G(x \mid θ_3 )$ all corresponding to exponential distributions with means $θ_1$ , $θ_2$ and $θ_3$ respectively.
+For example, we could define a mixture with $K = 3$ components, with $G(x \mid \theta_1 )$, $G(x \mid \theta_2 )$ and $G(x \mid \theta_3 )$ all corresponding to exponential distributions with means $\theta_1$ , $\theta_2$ and $\theta_3$ respectively.
 
 In that case, the cumulative distribution function of the mixture is given by
 
 
 $$
-F(x) = \left(ω_1 \left[ 1 − e^ {x \over \theta_1}\right] + ω_2\left[ 1 − e^ {x \over \theta_2}\right] + ω_3 \left[ 1 − e^ {x \over \theta_3}\right] \right)\mathbb{I}_{x\ge0} \qquad
+F(x) = \left(\omega_1 \left[ 1 − e^ {x \over \theta_1}\right] + \omega_2\left[ 1 − e^ {x \over \theta_2}\right] + \omega_3 \left[ 1 − e^ {x \over \theta_3}\right] \right)\mathbb{I}_{x\ge0} \qquad
 $$ {#eq-exponential-mixture}
 
 
 $$
-f(x) = \left({ω_1\over \theta_1} \left[ 1 − e^ {x \over \theta_1}\right] + {ω_2\over \theta_2}\left[ 1 − e^ {x \over \theta_2}\right] + {ω_3\over \theta_3} \left[ 1 − e^ {x \over \theta_3}\right] \right)\mathbb{I}_{x\ge0} \qquad
+f(x) = \left({\omega_1\over \theta_1} \left[ 1 − e^ {x \over \theta_1}\right] + {\omega_2\over \theta_2}\left[ 1 − e^ {x \over \theta_2}\right] + {\omega_3\over \theta_3} \left[ 1 − e^ {x \over \theta_3}\right] \right)\mathbb{I}_{x\ge0} \qquad
 $$ {#eq-exponential-mixture-density}
 
 
@@ -107,7 +107,7 @@ $$ {#eq-exponential-mixture-density}
 
 -   Mixtures of normal can take more flexible form than an individual normal.
 -   We can use mixtures to create:
-    -   Unimodal distributions @fig-Mixture-Gaussians-heavy-tail
+    -   Unimodal distributions @fig-normal-heavy-tail-mixture-R
     -   Bi-modal distribution c.f. @fig-Mixture-Gaussians-bimodal-R
     -   Multi-modal distributions.  
     -   Heavy tailed distributions @fig-normal-heavy-tail-mixture-R
@@ -347,25 +347,44 @@ plt.close()
 ```
 :::
 
+## Zero Inflated Mixtures
+
+-   Zero inflated distributions are useful for modeling data with excess zeros (often in term of count data).
+- We learned in course 1 & 2 that the negative binomial or equivalent beta are zero inflated in comparison to the Poisson distribution. 
+- Today we see how we use mixture models by adding a point mass at zero to the distribution.
+- Example from biology is the number of eggs in a nest.
+- Example from insurance is the number of claims in a year. 
+- Example from survival analysis is the time to event data with a lot of censoring.  
+
+Note there are two approaches to zero inflation:
+
+1. one step models like the negative binomial.
+1. hurdle models - two step models where we first model the zero inflation and then the count data - This corresponds to the hierarchical representation of the mixture model.
+
 ### Example of a Zero-inflated log Gaussian distribution
 
+This is a mixture of a point mass at zero and a log Gaussian distribution. This corresponds to the example where we have a light bulb factory and we want to model the time to failure of the light bulbs. We know that for the defective light bulbs, the time to failure is zero. For the non-defective light bulbs, the time to failure is log normally distributed with mean 1.5 and standard deviation 0.5
 
 $$
 f(x) = 0.3 \times \mathbb{I}_{x\ge0} + 0.7 \times \mathcal{LN}(1.5, 0.5) \qquad
 $$ {#eq-zero-inflated-log-gaussian-pdf}
 
-
-::: {.panel-tabset}
+::: {#exm-zero-inflated-log-normal-mix .panel-tabset}
 ## R
+
+```{r}
+#| label: lbl-Zero-inflated-log-Gaussian-R
+## The ZILN model 
+x = seq(-2, 15, length=1000)
+y = plnorm(x, 1.5, 0.5)
+z = 0.3*as.numeric(x>=0) + (1-0.3)*y
+```
 
 ```{r}
 #| label: fig-Zero-inflated-log-Gaussian-R
 #| fig-cap: "Zero inflated log Gaussian"
-#| 
-## Zero inflated negative binomial distribution
-x = seq(-2, 15, length=1000)
-y = plnorm(x, 1.5, 0.5)
-z = 0.3*as.numeric(x>=0) + (1-0.3)*y
+
+## The plot
 par(mar=c(4,4,1,1)+0.1)
 plot(x, y, type="l", las=1, lty=2, xlab="x", 
      ylab="Cumulative distribution Function", lwd=2)
@@ -377,10 +396,8 @@ legend(4, 0.45, c("Zero infla. log Gaussian","log Gaussian"),
 ## python
 
 ```{python}
-#| label: fig-Zero-inflated-log-Gaussian-python
-#| fig-cap: "Zero inflated log Gaussian"
+#| label: lbl-Zero-inflated-log-Gaussian-py
 
-## title: Zero inflated negative binomial distribution
 import numpy as np
 import matplotlib.pyplot as plt
 from scipy.stats import lognorm
@@ -395,6 +412,13 @@ y = lognorm.pdf(loc = 0, scale = np.exp(1.5), s = 0.5, x = x)
 p_mass = np.zeros(len(x))
 p_mass[x >= 0] = 1
 z = 0.3 * p_mass + (1 - 0.3) * y
+
+```
+```{python}
+#| label: fig-Zero-inflated-log-Gaussian-py
+#| fig-cap: "Zero inflated log Gaussian"
+
+## title: Zero inflated negative binomial distribution
 
 # Plotting the mixture models
 fig, ax = plt.subplots(1, 1)
@@ -416,7 +440,7 @@ f(x) = 0.2 \times \mathbb{I}_{x=0} + 0.8 \times NB(8, 0.6) \qquad
 $$ {#eq-zero-inflated-negative-binomial-pdf}
 
 
-::: {.panel-tabset}
+::: {#exm-zero-inflated-neg-bin-mix .panel-tabset}
 ## R
 
 ```{r}
@@ -477,11 +501,28 @@ plt.show()
 
 ## Hierarchical representations
 
+![Hierarchical representation of a mixture](images/c3l01-ss-08-mixtures-heirarchial-representation.png){.column-margin}
 
+Recall that the cumulative distribution function of a mixture takes the form @eq-finite-mixture-cdf, where $G_k(x)$ is the cumulative distribution function of the $k$-th component of the mixture. 
 
-![Hierarchical representation of a mixture](images/c3l02-ss-01-mixtures-heirarchial-representation.png){.column-margin}
+We can use a RV for each component and introduce an indicator RV for  the component selector $C_i$ to select the component from which we will sample. This results in a hierarchical representation of the mixture model.
 
-![simulation of a mixture](images/c3l02-ss-02-mixture-simulation.png){.column-margin}
+$$
+X \mid c \sim g_c(x) \qquad \mathbb{P}r(c=k) = \omega_k \qquad
+$$ {#eq-finite-mixture-cdf-hierarchical}
+
+where $C$ is a categorical random variable with $K$ categories, and $G_k(x \mid C=k)$ is the cumulative distribution function of the $k$-th component of the mixture given that we have selected the $k$-th component.
+
+This allows us to write the cumulative distribution function of the mixture as a weighted sum of the cumulative distribution functions of the components 
+
+$$
+p(x) = \sum^K_{k=1} p(x \mid C=k) \cdot \mathbb{P}r(C=k) = \sum^K_{k=1} g_k(x) \cdot \omega_k \qquad
+$$ {#eq-finite-mixture-cdf-hierarchical-2}
+
+where $g_k(x)$ is the cumulative distribution function of the $k$-th component of the mixture.
+
+![simulation of a mixture](images/c3l01-ss-09-mixture-simulation.png){.column-margin}
+
 
 ### Sample code for simulating from a Mixture Model
 
@@ -491,7 +532,7 @@ plt.show()
 ## R
 
 ```{r}
-#| label: generate-mixture-R
+#| label: lst-simulate-two-gaussian-mixture-R
 
 # Generate n observations from a mixture of two Gaussian distributions
 n     = 50           # required sample size
@@ -503,12 +544,12 @@ x     = rnorm(n, mu[cc], sigma[cc]) # sample the selected component
 ```
 
 ```{r}
-#| label: fig-generate-mixture-R-plot
+#| label: fig-two-gaussian-mixture-R-plot
 #| fig-cap: "Mixture of two Gaussians"
 
 # Plot f(x) along with the observations just sampled
 xx = seq(-5, 12, length=200)
-yy = w[1]*dnorm(xx, mu[1], sigma[1]) + w[2]*dnorm(xx, mu[2], sigma[2])
+yy = w[1] * dnorm(xx, mu[1], sigma[1]) + w[2] * dnorm(xx, mu[2], sigma[2])
 par(mar=c(4,4,1,1)+0.1)
 plot(xx, yy, type="l", ylab="Density", xlab="x", las=1, lwd=2)
 points(x, y=rep(0,n), pch=1, col=cc)
@@ -555,7 +596,7 @@ plt.show()
 
 ## The Likelihood function
 
-![observed data likelihood](images/c3l03-ss-01-mixtures-observed-likelihood.png){.column-margin} 
+![observed data likelihood](images/c3l01-ss-10-mixtures-observed-likelihood.png){.column-margin} 
 
 - we are now moving on to inferring the parameters of the mixture model from the observed data. 
 - we can estimate these using the maximum likelihood estimation or with Bayesian estimation. 
@@ -565,9 +606,18 @@ plt.show()
     -   the **observed data likelihood** is the probability of observing the data given the parameters of the model.
     -   the **complete data likelihood** is the probability of observing the data and the latent variables given the parameters of the model.
 
-![complete data likelihood](images/c3l03-ss-02-mixtures-complete-data-likelihood.png){.column-margin}
+![complete data likelihood](images/c3l01-ss-11-mixtures-complete-data-likelihood.png){.column-margin}
 
 ## Parameter identifiability
+
+![Identifiability - Label switching](images/c3l01-ss-12-identifiability-label-switching.png){.column-margin}
+
+
+![identifiability - split weights](images/c3l01-ss-13-identifiability-split-weights.png){.column-margin}
+
+
+![identifiability - zero weights](images/c3l01-ss-14-identifiability-zero-weight.png){.column-margin}
+
 
 A probability model is identifiable if and only if different values of the parameters generate different probability distributions of the observable variables.
 
@@ -581,10 +631,4 @@ Question: Is there a "Canonical representation" which fixes this, essentially a 
 
 ### Label switching
 
-![Identifiability - Label switching](images/c3l04-ss-01-identifiebility-label-switching.png){.column-margin}
-
 The labels used to distinguish the components in the mixture are not identifiable. The literature sometimes refers to this type of lack of identifiability as the label switching "problem". Whether label switching is an actual problem or not depends on the computational algorithm being used to fit the model, and the task we are attempting to complete in any particular case. For example, label switching tends to not be an issue for the purpose of density estimation or classification problems, but it can lead to serious difficulties in clustering problems.
-
-![identifiability - split weights](images/c3l04-ss-02-identifiability-split-weights.png){.column-margin}
-
-![identifiability - zero weights](images/c3l04-ss-03-identifiability-zero-weight.png){.column-margin}
