notes on classification

--- a/C3-L04.qmd
+++ b/C3-L04.qmd
@@ -269,6 +269,7 @@ legend(27000, 0.00017, c("KDE","EM","MCMC"), col=colscale[c(3,2,1)], lty=c(3,2,1
 
 ### Mixture Models for Clustering
 
+
 ### Clustering example
 
 ```{r}
@@ -402,9 +403,34 @@ ARIkmeans = adjustedRandIndex(irisCluster$cluster, as.numeric(iris[,5]))
 
 ## Classification
 
+Classification is a supervised learning problem where we want to predict the class of a new observation based on its features.
+
+According to the instructor the main difference from clustering is that in classification we have a training set. I would think the main difference is that we have labels for some of the data, while in clustering we do not have labels at all.
+
+The fact that we have labels and a training set means we should know how many classes we have and we can use these labels to train a model and use it to predict the class of a new observation.
+
+The instructor mentions Support Vector Machines (SVM), logistic regression and linear discriminant analysis (LDA) as familiar examples of classification methods. These and a number of others are covered in [@isl]. We will focus on Naive Bayes classifiers as it is the most similar to mixture models and the EM algorithm which we have seen earlier
 
 ### Mixture Models and naive Bayes classifiers
 
+![K-means clustering](images/c3l4-ss-04-classification-overview.png){.column-margin}
+
+
+![K-means clustering](images/c3l4-ss-05-classification-naive-bayes.png){.column-margin}
+
+
+![Mixture Models for Clustering](images/c3l4-ss-06-classification-mixtures.png){.column-margin}
+
+
+#### Naive Bayes classifiers
+
+The idea of Naive Bayes classifiers is that we want to know what is the probability that observation i belongs to class k and we can obtain this using Bayes' theorem by computing the prior probability that an observation is in that class. This is just the frequency of the class multiplied by the density of that class and divided by the sum over the classes of the same expression.
+
+$$
+P(x_i \in \text{class}_k) = \frac{w_k \cdot g_k(x_i|\theta_k)}{\sum_{j=1}^K w_j \cdot g_j(x_i|\theta_j)}
+$$ {#eq-bayes-classifier}
+
+where $w_k$ is the prior probability of class k, $g_k(x_i
 
 ### Linear and quadratic discriminant analysis in the context of Mixture Models
 
