em notes for course 3

--- a/C3-L02.qmd
+++ b/C3-L02.qmd
@@ -26,11 +26,17 @@ It worthwhile mentioning that MLE is more of a frequentist approach, as it provi
 
 ## EM algorithms for Mixture Models
 
-EM algorism comes up a lot in NLP and other fields so it is worthwhile to understand it the way we will do so in the course.
+![](images/c3l2-ss-01-em-for-general-mixtures.png){.column-margin}
+
+![](images/c3l2-ss-02-em-for-general-mixtures.png){.column-margin}
+
+![](images/c3l2-ss-03-em-for-general-mixtures.png){.column-margin}
+
+EM algorithm comes up a lot in NLP and other fields so it is worthwhile to understand it the way we will do so in the course.
 
 It also important that the EM algorithm we use for mixture models is from the 1970s and is not the same as the general EM algorithm.
 
-The EM algorithm is iterative and consists of two steps: the E-step and the M-step. The E-step computes the expected value of the complete-data log-likelihood given the observed data and the current parameter estimates, while the M-step maximizes this expected log-likelihood with respect to the parameters. However before we start these steps we need to se initial values for the parameters.
+The EM algorithm is iterative and consists of two steps: the E-step and the M-step. The E-step computes the expected value of the complete-data log-likelihood given the observed data and the current parameter estimates, while the M-step maximizes this expected log-likelihood with respect to the parameters. However before we start these steps we need to set initial values for the parameters.
 
 E step: Set
 
@@ -66,6 +72,13 @@ where the value of $v_{ik}$ is interpreted as the probability that the $i$-th ob
 
 ## EM for location Mixture of Gaussians
 
+![the responsibility](images/c3l2-ss-04-em-for-location-mixtures-of-gaussians.png){.column-margin}
+
+![the derivative of Q wrt to w](images/c3l2-ss-05-em-for-location-mixtures-of-gaussians.png){.column-margin}
+
+![the derivative of Q wrt to mu](images/c3l2-ss-06-em-for-location-mixtures-of-gaussians.png){.column-margin}
+
+![the derivative of Q wrt to sigma](images/c3l2-ss-07-em-for-location-mixtures-of-gaussians.png){.column-margin}
 
 ## EM example 1
 
