--- a/C3-L04.qmd
+++ b/C3-L04.qmd
@@ -430,7 +430,33 @@ $$
 P(x_i \in \text{class}_k) = \frac{w_k \cdot g_k(x_i|\theta_k)}{\sum_{j=1}^K w_j \cdot g_j(x_i|\theta_j)}
 $$ {#eq-bayes-classifier}
 
-where $w_k$ is the prior probability of class k, $g_k(x_i
+where $w_k$ is the prior probability of class k, $g_k(x_i|\theta_k)$ is the density of class k, and $\theta_k$ is the parameter of class k.
+
+with 
+
+$$
+\tilde{c}_i = \arg \max_k \mathbb{P}r(x_i \in \text{class}_k)\ for \; i=n+1,\ldots,n+m
+$$
+
+The naive Bayes classifier assumes that the features are conditionally independent given the class. This means that the density of class k can be written as the product of the densities of each feature given the class:
+$$
+g_k(x_i|\theta_k) = \prod_{l=1}^p g_{kl}(x_{il}|\theta_{kl})
+$$
+
+where $g_{kl}(x_{il}|\theta_{kl})$ is the density of feature l given class k and $\theta_{kl}$ is the parameter of feature l given class k. This means that we can estimate the density of each feature separately and then multiply them together to get the density of the class.
+
+
+This is a very strong assumption and is not true in general. However, it works well in practice and is often used in text classification problems where the features are the words in the text.
+
+The naive Bayes classifier is a special case of the mixture model where the components are the classes and the densities are the product of the densities of each feature given the class. This means that we can use the EM algorithm to estimate the parameters of the model in the same way as we did for the mixture model. The only difference is that we need to estimate the densities of each feature separately and then multiply them together to get the density of the class.
+
+
+### LDA and the EM algorithm
+
+![LDA](images/c3l4-ss-08-lda.png){.column-margin}
+
+![LDA](images/c3l4-ss-09-lda.png){.column-margin}
+
 
 ### Linear and quadratic discriminant analysis in the context of Mixture Models
 
