--- a/C3-L05.qmd
+++ b/C3-L05.qmd
@@ -212,9 +212,11 @@ pairs2(x, col=colscale[cc], labels=cc)
 
 ### Sample code to illustrate multimodality issues 2
 
+This code fails to converge because the algorithm is stuck in a local maximum of the likelihood function. The problem is that one of the components is "numerically empty" (i.e., it has no data points assigned to it). This can happen when the initial values for the means are too far apart or when the data is not well-separated.
 
 ```{r}
 #| label: lst-multimodality-sample-code-2
+#| error: true
 
 ## Illustrating that the EM might fail for numerical reasons if a component is “numerically empty”
 
