--- a/C3-L01-Ex6.qmd
+++ b/C3-L01-Ex6.qmd
@@ -10,8 +10,14 @@ keywords:
 
 ## HW+ - Sim mixture of exponential distributions
 
+
+::: {.callout-note}
+### Instructions
+
 - Modify code to Generate n observations from a mixture of two Gaussian # distributions into code to sample 100 random numbers from a mixture of 4 exponential distributions with means 1, 4, 7 and 10 and weights 0.3, 0.25, 0.25 and 0.2, respectively. 
 - Use these sample to approximate the mean and variance of the mixture.
+
+:::
 
 ```{r}
 set.seed(238)                            # reproducibility
