--- a/C3-L02.qmd
+++ b/C3-L02.qmd
@@ -1,5 +1,5 @@
 ---
-title : 'Maximum Likelihood Estimation of Mixture Models'
+title : 'The EM algorithm for zero-inflated mixtures'
 subtitle : 'Bayesian Statistics: Mixture Models'
 categories:
   - Bayesian Statistics
