--- a/C3-L03.qmd
+++ b/C3-L03.qmd
@@ -13,11 +13,41 @@ keywords:
 
 ## Markov Chain Monte Carlo algorithms part 1
 
+![](images/c3l3-ss-01-mcmc-part1.png){.column-margin}
+
+![](images/c3l3-ss-02-mcmc-part1.png){.column-margin}
+
+
 ## Markov Chain Monte Carlo algorithms part 2
+
+![](images/c3l3-ss-03-mcmc-part2.png){.column-margin}
+
+![](images/c3l3-ss-04-mcmc-part2.png){.column-margin}
+
+![](images/c3l3-ss-05-mcmc-part2.png){.column-margin}
+
 
 ## MCMC for location mixtures of normals Part 1
 
+
+![](images/c3l3-ss-06-mcmc-for-location-mixtures-of-normals-part-1.png){.column-margin}
+
+![](images/c3l3-ss-07-mcmc-for-location-mixtures-of-normals-part-1.png){.column-margin}
+
+![](images/c3l3-ss-08-mcmc-for-location-mixtures-of-normals-part-1.png){.column-margin}
+
+![](images/c3l3-ss-09-mcmc-for-location-mixtures-of-normals-part-1.png){.column-margin}
+
+![](images/c3l3-ss-10-mcmc-for-location-mixtures-of-normals-part-1.png){.column-margin}
+
+
 ## MCMC for location mixtures of normals Part 2
+
+![](images/c3l3-ss-11-mcmc-for-location-mixtures-of-normals-part-2.png){.column-margin}
+
+![](images/c3l3-ss-12-mcmc-for-location-mixtures-of-normals-part-2.png){.column-margin}
+
+![](images/c3l3-ss-13-mcmc-for-location-mixtures-of-normals-part-2.png){.column-margin}
 
 ## MCMC Example 1
 
